--- a/SKUtils/Flows/Subviews Animations Example/To/View/ToViewController.xib
+++ b/SKUtils/Flows/Subviews Animations Example/To/View/ToViewController.xib
@@ -27,6 +27,9 @@
                     <constraints>
                         <constraint firstAttribute="width" secondItem="jkv-o7-sxR" secondAttribute="height" multiplier="1:1" id="EtF-g1-Cmq"/>
                     </constraints>
+                    <userDefinedRuntimeAttributes>
+                        <userDefinedRuntimeAttribute type="string" keyPath="subviewId" value="avatar"/>
+                    </userDefinedRuntimeAttributes>
                 </imageView>
                 <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="2Ew-Ut-Xdi">
                     <rect key="frame" x="127.5" y="617" width="120" height="30"/>
@@ -40,6 +43,7 @@
                         <userDefinedRuntimeAttribute type="number" keyPath="cornerRadius">
                             <real key="value" value="0.0"/>
                         </userDefinedRuntimeAttribute>
+                        <userDefinedRuntimeAttribute type="string" keyPath="subviewId" value="button"/>
                     </userDefinedRuntimeAttributes>
                     <connections>
                         <action selector="backButtonPressed:" destination="-1" eventType="touchUpInside" id="E0Y-Wp-UwJ"/>
