--- a/SKUtils/Flows/Subviews Animations Example/From/View/FromViewController.xib
+++ b/SKUtils/Flows/Subviews Animations Example/From/View/FromViewController.xib
@@ -56,6 +56,9 @@
                     <fontDescription key="fontDescription" type="system" pointSize="17"/>
                     <nil key="textColor"/>
                     <nil key="highlightedColor"/>
+                    <userDefinedRuntimeAttributes>
+                        <userDefinedRuntimeAttribute type="string" keyPath="subviewId" value="text"/>
+                    </userDefinedRuntimeAttributes>
                 </label>
             </subviews>
             <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
