--- a/SKUtils/Flows/Subviews Animations Example/From/View/FromViewController.xib
+++ b/SKUtils/Flows/Subviews Animations Example/From/View/FromViewController.xib
@@ -23,36 +23,48 @@
             <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
             <subviews>
-                <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="Gal" translatesAutoresizingMaskIntoConstraints="NO" id="vs4-0D-1R6">
-                    <rect key="frame" x="20" y="40" width="100" height="100"/>
+                <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="cGN-Zh-yAt">
+                    <rect key="frame" x="0.0" y="20" width="375" height="140"/>
+                    <subviews>
+                        <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="Gal" translatesAutoresizingMaskIntoConstraints="NO" id="vs4-0D-1R6">
+                            <rect key="frame" x="20" y="20" width="100" height="100"/>
+                            <constraints>
+                                <constraint firstAttribute="width" constant="100" id="DPQ-Pt-mwQ"/>
+                                <constraint firstAttribute="width" secondItem="vs4-0D-1R6" secondAttribute="height" multiplier="1:1" id="yZj-qj-5tQ"/>
+                            </constraints>
+                            <userDefinedRuntimeAttributes>
+                                <userDefinedRuntimeAttribute type="string" keyPath="subviewId" value="avatar"/>
+                            </userDefinedRuntimeAttributes>
+                        </imageView>
+                        <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="m3q-2h-DXO">
+                            <rect key="frame" x="140" y="90" width="140" height="30"/>
+                            <color key="backgroundColor" red="1" green="0.14913141730000001" blue="0.0" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                            <constraints>
+                                <constraint firstAttribute="width" constant="140" id="KES-4b-7BB"/>
+                                <constraint firstAttribute="height" constant="30" id="WUq-sS-nqT"/>
+                            </constraints>
+                            <state key="normal" title="Show picture"/>
+                            <userDefinedRuntimeAttributes>
+                                <userDefinedRuntimeAttribute type="number" keyPath="cornerRadius">
+                                    <real key="value" value="15"/>
+                                </userDefinedRuntimeAttribute>
+                                <userDefinedRuntimeAttribute type="string" keyPath="subviewId" value="button"/>
+                            </userDefinedRuntimeAttributes>
+                            <connections>
+                                <action selector="actionButtonPressed:" destination="-1" eventType="touchUpInside" id="QhG-fY-gSP"/>
+                            </connections>
+                        </button>
+                    </subviews>
                     <constraints>
-                        <constraint firstAttribute="width" constant="100" id="DPQ-Pt-mwQ"/>
-                        <constraint firstAttribute="width" secondItem="vs4-0D-1R6" secondAttribute="height" multiplier="1:1" id="yZj-qj-5tQ"/>
+                        <constraint firstItem="vs4-0D-1R6" firstAttribute="leading" secondItem="cGN-Zh-yAt" secondAttribute="leading" constant="20" id="0GA-9W-p4r"/>
+                        <constraint firstAttribute="bottom" secondItem="vs4-0D-1R6" secondAttribute="bottom" constant="20" id="KLc-t9-g3N"/>
+                        <constraint firstItem="m3q-2h-DXO" firstAttribute="leading" secondItem="vs4-0D-1R6" secondAttribute="trailing" constant="20" id="oL6-uL-YNf"/>
+                        <constraint firstItem="vs4-0D-1R6" firstAttribute="top" secondItem="cGN-Zh-yAt" secondAttribute="top" constant="20" id="ssy-kw-XgS"/>
+                        <constraint firstItem="m3q-2h-DXO" firstAttribute="bottom" secondItem="vs4-0D-1R6" secondAttribute="bottom" id="z65-ua-UIB"/>
                     </constraints>
-                    <userDefinedRuntimeAttributes>
-                        <userDefinedRuntimeAttribute type="string" keyPath="subviewId" value="avatar"/>
-                    </userDefinedRuntimeAttributes>
-                </imageView>
-                <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="m3q-2h-DXO">
-                    <rect key="frame" x="140" y="110" width="140" height="30"/>
-                    <color key="backgroundColor" red="1" green="0.14913141730000001" blue="0.0" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
-                    <constraints>
-                        <constraint firstAttribute="width" constant="140" id="KES-4b-7BB"/>
-                        <constraint firstAttribute="height" constant="30" id="WUq-sS-nqT"/>
-                    </constraints>
-                    <state key="normal" title="Show picture"/>
-                    <userDefinedRuntimeAttributes>
-                        <userDefinedRuntimeAttribute type="number" keyPath="cornerRadius">
-                            <real key="value" value="15"/>
-                        </userDefinedRuntimeAttribute>
-                        <userDefinedRuntimeAttribute type="string" keyPath="subviewId" value="button"/>
-                    </userDefinedRuntimeAttributes>
-                    <connections>
-                        <action selector="actionButtonPressed:" destination="-1" eventType="touchUpInside" id="QhG-fY-gSP"/>
-                    </connections>
-                </button>
+                </view>
                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Gal Gadot" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="03H-pj-6zC">
-                    <rect key="frame" x="130" y="40" width="235" height="20.5"/>
+                    <rect key="frame" x="140" y="40" width="225" height="20.5"/>
                     <fontDescription key="fontDescription" type="system" pointSize="17"/>
                     <nil key="textColor"/>
                     <nil key="highlightedColor"/>
@@ -61,16 +73,15 @@
                     </userDefinedRuntimeAttributes>
                 </label>
             </subviews>
-            <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+            <color key="backgroundColor" red="0.17254901959999999" green="0.63529411759999999" blue="0.7843137255" alpha="1" colorSpace="calibratedRGB"/>
             <constraints>
-                <constraint firstItem="m3q-2h-DXO" firstAttribute="leading" secondItem="vs4-0D-1R6" secondAttribute="trailing" constant="20" id="67U-qr-9AR"/>
-                <constraint firstItem="m3q-2h-DXO" firstAttribute="bottom" secondItem="vs4-0D-1R6" secondAttribute="bottom" id="7uA-gk-smZ"/>
-                <constraint firstItem="vs4-0D-1R6" firstAttribute="leading" secondItem="fwJ-ZV-ZKT" secondAttribute="leading" constant="20" id="Mdd-Rh-mRe"/>
+                <constraint firstItem="03H-pj-6zC" firstAttribute="leading" secondItem="vs4-0D-1R6" secondAttribute="trailing" constant="20" id="5JB-Jt-ElB"/>
                 <constraint firstItem="fwJ-ZV-ZKT" firstAttribute="trailing" secondItem="03H-pj-6zC" secondAttribute="trailing" constant="10" id="QLq-bz-Q8B"/>
-                <constraint firstItem="03H-pj-6zC" firstAttribute="top" secondItem="vs4-0D-1R6" secondAttribute="top" id="Sss-vD-wZY"/>
-                <constraint firstItem="03H-pj-6zC" firstAttribute="leading" secondItem="vs4-0D-1R6" secondAttribute="trailing" constant="10" id="ga4-vZ-w0g"/>
-                <constraint firstItem="vs4-0D-1R6" firstAttribute="top" secondItem="fwJ-ZV-ZKT" secondAttribute="top" constant="20" id="t7O-eo-xW8"/>
-                <constraint firstItem="m3q-2h-DXO" firstAttribute="top" relation="greaterThanOrEqual" secondItem="03H-pj-6zC" secondAttribute="bottom" constant="20" id="wwm-yE-Xg6"/>
+                <constraint firstItem="fwJ-ZV-ZKT" firstAttribute="trailing" secondItem="cGN-Zh-yAt" secondAttribute="trailing" id="ZHD-Sf-ZQ1"/>
+                <constraint firstItem="cGN-Zh-yAt" firstAttribute="leading" secondItem="fwJ-ZV-ZKT" secondAttribute="leading" id="edW-Rz-doe"/>
+                <constraint firstItem="cGN-Zh-yAt" firstAttribute="top" secondItem="fwJ-ZV-ZKT" secondAttribute="top" id="hM9-Lt-OrB"/>
+                <constraint firstItem="cGN-Zh-yAt" firstAttribute="centerX" secondItem="fwJ-ZV-ZKT" secondAttribute="centerX" id="pTe-Hv-gQL"/>
+                <constraint firstItem="03H-pj-6zC" firstAttribute="top" secondItem="vs4-0D-1R6" secondAttribute="top" id="pV4-bK-LdR"/>
             </constraints>
             <viewLayoutGuide key="safeArea" id="fwJ-ZV-ZKT"/>
             <point key="canvasLocation" x="25.5" y="51.5"/>
