--- a/SKUtils/Flows/Examples/View/ExamplesViewController.xib
+++ b/SKUtils/Flows/Examples/View/ExamplesViewController.xib
@@ -9,9 +9,9 @@
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <objects>
-        <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="MainMenuViewController">
+        <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="ExamplesViewController">
             <connections>
-                <outlet property="tableView" destination="bME-jt-Rz1" id="VR6-uD-Cbt"/>
+                <outlet property="tableView" destination="77p-7v-efm" id="mGX-eo-xsz"/>
                 <outlet property="view" destination="i5M-Pr-FkT" id="sfx-zR-JGt"/>
             </connections>
         </placeholder>
@@ -20,25 +20,23 @@
             <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
             <subviews>
-                <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="bME-jt-Rz1">
+                <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="77p-7v-efm">
                     <rect key="frame" x="0.0" y="20" width="375" height="647"/>
                     <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                     <connections>
-                        <outlet property="delegate" destination="-1" id="TcP-DQ-0Tr"/>
+                        <outlet property="delegate" destination="-1" id="j0T-I6-m89"/>
                     </connections>
                 </tableView>
             </subviews>
             <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
             <constraints>
-                <constraint firstItem="bME-jt-Rz1" firstAttribute="top" secondItem="fwJ-ZV-ZKT" secondAttribute="top" id="5kY-2J-6VP"/>
-                <constraint firstItem="fwJ-ZV-ZKT" firstAttribute="trailing" secondItem="bME-jt-Rz1" secondAttribute="trailing" id="Epl-Hm-fvl"/>
-                <constraint firstItem="bME-jt-Rz1" firstAttribute="leading" secondItem="fwJ-ZV-ZKT" secondAttribute="leading" id="m7I-Km-Mgk"/>
-                <constraint firstItem="fwJ-ZV-ZKT" firstAttribute="bottom" secondItem="bME-jt-Rz1" secondAttribute="bottom" id="w0c-Kp-aQy"/>
+                <constraint firstItem="77p-7v-efm" firstAttribute="leading" secondItem="i5M-Pr-FkT" secondAttribute="leading" id="0Tv-Cp-uiv"/>
+                <constraint firstItem="77p-7v-efm" firstAttribute="top" secondItem="fwJ-ZV-ZKT" secondAttribute="top" id="UNq-vx-afY"/>
+                <constraint firstItem="fwJ-ZV-ZKT" firstAttribute="trailing" secondItem="77p-7v-efm" secondAttribute="trailing" id="cjG-vA-0Bx"/>
+                <constraint firstItem="fwJ-ZV-ZKT" firstAttribute="bottom" secondItem="77p-7v-efm" secondAttribute="bottom" id="ntC-Nt-BZU"/>
             </constraints>
             <viewLayoutGuide key="safeArea" id="fwJ-ZV-ZKT"/>
-            <userDefinedRuntimeAttributes>
-                <userDefinedRuntimeAttribute type="boolean" keyPath="subviewsAnimationEnabled" value="YES"/>
-            </userDefinedRuntimeAttributes>
+            <point key="canvasLocation" x="25.5" y="51.5"/>
         </view>
     </objects>
 </document>
