--- a/SKUtils/Flows/Subviews Animations Example/From/View/FromViewController.xib
+++ b/SKUtils/Flows/Subviews Animations Example/From/View/FromViewController.xib
@@ -85,7 +85,7 @@
             </constraints>
             <viewLayoutGuide key="safeArea" id="fwJ-ZV-ZKT"/>
             <userDefinedRuntimeAttributes>
-                <userDefinedRuntimeAttribute type="boolean" keyPath="subviewsAnimationEnabled" value="YES"/>
+                <userDefinedRuntimeAttribute type="boolean" keyPath="subviewsMathing" value="YES"/>
             </userDefinedRuntimeAttributes>
             <point key="canvasLocation" x="25.5" y="51.5"/>
         </view>
